src-tauri/build_log_2.txt
   Compiling sqsh v0.1.0 (C:\Users\me\projects\sqsh\src-tauri)
error[E0308]: mismatched types
   --> src\lib.rs:41:71
    |
 41 |             encoder.encode(img.as_bytes(), img.width(), img.height(), img.color())
    |                     ------ arguments to this method are incorrect     ^^^^^^^^^^^ expected `ExtendedColorType`, found `ColorType`
    |
note: method defined here
   --> C:\Users\me\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\image-0.25.9\src\codecs\jpeg\encoder.rs:479:12
    |
479 |     pub fn encode(
    |            ^^^^^^
help: call `Into::into` on this expression to convert `image::ColorType` into `ExtendedColorType`
    |
 41 |             encoder.encode(img.as_bytes(), img.width(), img.height(), img.color().into())
    |                                                                                  +++++++

warning: unused import: `image::GenericImageView`
 --> src\lib.rs:4:5
  |
4 | use image::GenericImageView;
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0308`.
warning: `sqsh` (lib) generated 1 warning
error: could not compile `sqsh` (lib) due to 1 previous error; 1 warning emitted
